syntax = "proto3";

package cosmos.bank.v1beta1;

option java_package = "cosmos.bank.v1beta1";
option java_multiple_files = true;
option java_outer_classname = "TxProto";

import "cosmos/base/v1beta1/coin.proto";

// MsgSend represents a message to send coins from one account to another.
message MsgSend {
  string from_address = 1;
  string to_address = 2;
  repeated cosmos.base.v1beta1.Coin amount = 3;
}

// MsgSendResponse defines the Msg/Send response type.
message MsgSendResponse {}